# olinguito

./: CHANGELOG.txt  README.md  pyproject.toml
.github/workflows/: tests.yml
olinguito/: __init__.py  generating.py  mapping.py  schema.py  typeguards.py  wrapping.py
tests/: test_generating.py  test_mapping.py  test_schema.py  test_wrapping.py
